--- a/models/ALBEF/configs/VQA_viswis.yaml
+++ b/models/ALBEF/configs/VQA_viswis.yaml
@@ -1,9 +1,10 @@
 train_file: ['../../data/VisWis_VQA_Grounding/annotations/train_grounding.json']
              
 test_file: ['../../data/VisWis_VQA_Grounding/annotations/val_grounding.json']
+test_file2: ['../../data/VisWis_VQA_Grounding/annotations/test_grounding.json']
 answer_list: '../../processed/answer_list.json'
 
-vqa_root: {'train': '../../data/VisWis_VQA_Grounding/train', 'test': '../../data/VisWis_VQA_Grounding/val'}
+vqa_root: {'train': '../../data/VisWis_VQA_Grounding/train', 'test': '../../data/VisWis_VQA_Grounding/val', 'test2': '../../data/VisWis_VQA_Grounding/test'}
 # vg_root: '/export/share/datasets/vision/visual-genome/'  #image/
 
 image_res: 384
